--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ select {
 }
 .main-stage {
 	position: fixed;
-	top: 270px;
+	top: 240px;
 	bottom: 80px;
 	left: 300px;
 	right: 300px;
@@ -95,7 +95,7 @@ select {
 }
 .timeline-controls {
 	position: fixed;
-	top: 240px;
+	top: 210px;
 	height: 30px;
 	background: #222;
 	transition: all .25s ease-out;
@@ -103,7 +103,7 @@ select {
 .timeline {
 	position: fixed;
 	top: 40px;
-	height: 200px;
+	height: 170px;
 	left: 300px;
 	right: 300px;
 	overflow: scroll;
@@ -111,6 +111,11 @@ select {
 	background-repeat: repeat;
   	background-size: 10px 1px;
 	transition: all .25s ease-out;
+}
+.timeline .scurbber {
+	min-height: 30px;
+	width: 100%;
+	background: red;
 }
 .timeline-layer {
 	border: 1px solid #888;
@@ -127,6 +132,10 @@ select {
 	display: inline-block;
 	position: absolute;
 	padding: 2px 4px;
+}
+.timeline-layer.selected .layer-details {
+	background: #666;
+	color: #FFF;
 }
 .timeline-layer .layer-color {
 	display: inline-block;
@@ -153,6 +162,32 @@ select {
 	width: 22px;
 	float: right;
 	opacity: 0;
+}
+.actions-layer {
+	background: #DDD;
+	position: relative;
+}
+.actions-layer .layer-details {
+	background: #BBB;
+	color: #222;
+	width: 200px;
+	height: 100%;
+	margin: 0;
+	display: inline-block;
+	padding: 2px 4px;
+}
+.actions-layer .keyframes {
+	width: 100%;
+	height: 100%;
+	background: url(../images/actions-grid.svg);
+	background-repeat: repeat;
+  	background-size: 50px 1px;
+	display: inline-block;
+	position: absolute;
+	left: 200px;
+}
+.navbar-panel {
+	border: 1px solid #555;
 }
 .navbar-panel .title {
 	background: #444;
@@ -190,6 +225,36 @@ select {
 	background: #444;
 	border-color: #222;
 }
-.actions-layer {
-	background: #DDD;
+.scrubber {
+	position: relative;
+}
+.scrubber .handle {
+	height: 30px;
+	width: 10px;
+	border: 1px solid red;
+	background: rgba(255, 0, 0, .33);
+	position: absolute;
+	left: 200px;
+	top: 0;
+}
+.glyphicon-rectangle {
+	display: inline-block;
+	width: 15px;
+	height: 15px;
+	border: 2px solid #DDD;
+}
+.glyphicon-circle {
+	display: inline-block;
+	width: 15px;
+	height: 15px;
+	border: 2px solid #DDD;
+	border-radius: 50%;
+}
+.glyphicon-line {
+	border-bottom: 2px solid #DDD;
+	transform: translateY(-8px) rotate(-45deg);
+	width: 20px;
+}
+.toolbar-icon {
+	padding: 8px 0 3px 0;
 }
